# solar-interpreter

./: .env  Cargo.toml  Readme.md  goal.sol  install.sh  note.md  resolving.md  restriction.md  types.md
Documentation/: Libraries-and-Modules.md
samples/: 1-simple-io.sol  2-calling-convention.sol
samples/3-proj/: main.sol
samples/3-proj/util/: max.sol
samples/4/: main.sol  solar.yaml
samples/4-no-deps/: solar.yaml
solarpath/libraries/std(solar-lang)/0.0.1/: solar.yaml
solarpath/libraries/std(solar-lang)/0.0.1/io/: console.sol
solarpath/libraries/std(solar-lang)/0.0.1/types/: array.sol  string.sol
solarpath/libraries/std(solar-lang)/0.0.1/types/int/: int.sol
solarpath/libraries/std(solar-lang)/0.0.1/util/: identity.sol
src/: eval.rs  id.rs  main.rs  types.rs  util.rs  value.rs
src/compilation/: error.rs  interpreter.rs  mod.rs
src/compilation/context/: function_store.rs  mod.rs  util.rs
src/compile/: custom.rs  mod.rs
src/eval/: context.rs  error.rs  file_context.rs  function_context.rs  mod.rs
src/eval/context/: function_store.rs  mod.rs
src/mir/: custom.rs  mod.rs
src/project/: libraries.rs  mod.rs  modules.rs  project.rs  project_info.rs
src/types/: buildin.rs  mod.rs
src/util/: mod.rs  scope.rs
